<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_player"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/arquivo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/default_video_path" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#dddddd" >

        <ImageButton
            android:id="@+id/start"
            android:contentDescription="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_start" />

        <ImageButton
            android:id="@+id/pause"
            android:contentDescription="@string/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_pause" />

        <ImageButton
            android:id="@+id/stop"
            android:contentDescription="@string/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_stop" />
    </LinearLayout>

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#eeeeee" >
    </SurfaceView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_surf_view" />

</LinearLayout>